# AIANO

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml  seed_data.py
api/alembic/: env.py
api/alembic/versions/: 66b0f68cd876_initial_migration.py
api/src/: main.py
api/src/api/v1/: annotation_entry_routes.py  auth_routes.py  dependencies.py  llm_proxy_routes.py  project_routes.py  schemas.py
api/src/core/: bootstrap.py  exceptions.py
api/src/core/db/pgsql/: config.py  models.py  schemas.py
api/src/core/domain/: entities.py  repositories.py
api/src/core/logging/: __init__.py  config.py
api/src/core/models/settings/: routes.py  service.py
api/src/core/services/: annotation_service.py  auth_service.py
api/src/infrastructure/repositories/: postgresql_repositories.py
docs/: troubleshooting.md
sample-data/: sample.json
ui/: .env.example  .eslintrc.json  .gitignore  .prettierrc.cjs  Dockerfile  index.html  package.json  vite.config.ts
ui/.devcontainer/: devcontainer.json  post-create.sh
ui/src/: main.tsx  routeTree.gen.ts
ui/src/app/routes/: __root.tsx  _layout.about.tsx  _layout.docs.tsx  _layout.index.tsx  _layout.tsx
ui/src/components/: BackGround.tsx  DevTools.tsx  ErrorComponent.tsx  InfoPoint.tsx  NavAuthenticated.tsx  NavPublic.tsx  NotFoundComponent.tsx  ProtectedRoute.tsx  SideBar.tsx  ThemeProvider.tsx
ui/src/contexts/: AuthContext.tsx  ToastContext.tsx
ui/src/services/: aiano-block-api.ts  api.ts  auth-api.ts  indexeddb-cache.ts  llm-config-api.ts  lru-cache.ts  project-api.ts
ui/src/styles/: globals.css
(+109 files in other folders)
